--- a/package.json
+++ b/package.json
@@ -14,5 +14,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {https://pornhublive.com/landing/mg-mobile/mg-top-cats-v2/&AFNO=1-537210&UHNSMTY=437?stno=2-630-0-5767-0-0-3192-4807}
 }
